# browser-companion

./: .gitignore  README.md
.github/workflows/: ci.yml
agent-sdk/python/: pyproject.toml
agent-sdk/python/browser_companion/: __init__.py  client.py
agent-sdk/python/tests/: test_client.py
extension/: ARCHITECTURE.md  background.ts  manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
extension/content/: content.ts
extension/lib/: cdp.ts  command-router.ts  logger.ts  tab-manager.ts  types.ts  ws-client.ts
extension/scripts/: copy-assets.js
extension/sidepanel/: sidepanel.html  sidepanel.ts
extension/sidepanel/tabs/: shared.ts
extension/tests/unit/: logic.test.ts  tab-manager.test.ts
tests/e2e/: browser-companion.e2e.spec.ts  playwright.config.ts
