[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-companion"
version = "0.1.0"
description = "Python SDK for Browser Companion Chrome Extension"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["browser_companion"]
